# muon-web

./: .gitignore  README.md  build-and-run-server.sh  cert-nginx-renew.sh  cert-nginx-setup.sh  config.toml  connect-aws.sh  deploy.sh  run-server.sh  start-server.sh  stop-server.sh  upload.sh
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml  README.md  run-server-watch.sh
backend/src/: main.rs
frontend/: README.md  config.toml
frontend/content/: _index.md
frontend/content/about/: _index.md  history.md  vision.md
frontend/content/blog/: 2023-09-22_homepage_renewal.md  2023-11-27_rust-format-on-save.md  2024-03-19_vscode-ctrl-p.md  2024-03-20_test.md  2024-03-21_funtoo_install_review.md  _index.md
frontend/content/blog/2023-08-30_starting_blog/: index.md
frontend/content/blog/2024-04-04_axum-rinf-flutter-example/: index.md
frontend/content/contact/: _index.md  recruit-info.md  recruit-process.md
frontend/sass/: style.scss
frontend/sass/_vendor/bulma-0.9.4/: package-lock.json
frontend/static/js/: carousel.js  search.js
frontend/templates/: 404.html  base.html  index.html  section.html
frontend/templates/about/: page.html  section.html
frontend/templates/authors/: single.html
frontend/templates/blog/: page.html  section.html
frontend/templates/categories/: single.html
frontend/templates/contact/: section.html
frontend/templates/macros/: banner.html  blog.html  footer.html  header.html  pages.html  tags.html  title.html
frontend/templates/tags/: single.html
public/: search_index.en.js
