[package]
name = "muon-website-server"
version = "1.0.0"
authors = ["Mewlips <mewlips@muon.co>"]
edition = "2018"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-utils = "3.0.1"
futures = "0.3.29"
env_logger = "0.10.1"
bytes = "1.5.0"
listenfd = "1.0.1"
serde = { version = "1.0.193", features = ["derive"] }
lettre = "0.10.4"
log = "0.4.20"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }
