[package]
name = "muon-website-server"
version = "1.0.0"
authors = ["Mewlips <mewlips@muon.co>"]
edition = "2018"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-utils = "3.0.1"
futures = "0.3.30"
env_logger = "0.11.3"
bytes = "1.5.0"
listenfd = "1.0.1"
serde = { version = "1.0.197", features = ["derive"] }
lettre = "0.11.4"
log = "0.4.21"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }
include_optional = "1.0.1"
