[package]
name = "muon-web-server"
version = "1.0.0"
authors = ["Mewlips <mewlips@muon.co>"]
edition = "2018"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-utils = "3.0.1"
futures = "0.3.31"
env_logger = "0.11.6"
bytes = "1.9.0"
serde = { version = "1.0.217", features = ["derive"] }
lettre = "0.11.11"
log = "0.4.22"
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }
